src/main/gen/me/hardcoded/arucas/language/ArucasParser.java
// This is a generated file. Not intended for manual editing.
package me.hardcoded.arucas.language;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static me.hardcoded.arucas.psi.ArucasTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ArucasParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return arucas(b, l + 1);
  }

  /* ********************************************************** */
  // TermExpression [ArithmeticOp ArithmeticExpression]
  static boolean ArithmeticExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticExpression")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = TermExpression(b, l + 1);
    r = r && ArithmeticExpression_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [ArithmeticOp ArithmeticExpression]
  private static boolean ArithmeticExpression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticExpression_1")) return false;
    ArithmeticExpression_1_0(b, l + 1);
    return true;
  }

  // ArithmeticOp ArithmeticExpression
  private static boolean ArithmeticExpression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticExpression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ArithmeticOp(b, l + 1);
    r = r && ArithmeticExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '+' | '-'
  static boolean ArithmeticOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticOp")) return false;
    boolean r;
    r = consumeToken(b, "+");
    if (!r) r = consumeToken(b, "-");
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  //   | VALUE_KEYWORD
  //   | STRING
  //   | NUMBER
  //   | '[' [ListElements] ']'
  //   | '{' [MapElements] '}'
  //   | 'fun' '(' [FunctionArguments] ')' '{' Statement* '}'
  //   | 'new' IDENTIFIER '(' [FunctionArguments] ')'
  //   | '(' Expression ')'
  public static boolean AtomExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AtomExpression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOM_EXPRESSION, "<atom expression>");
    r = consumeToken(b, IDENTIFIER);
    if (!r) r = consumeToken(b, VALUE_KEYWORD);
    if (!r) r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, NUMBER);
    if (!r) r = AtomExpression_4(b, l + 1);
    if (!r) r = AtomExpression_5(b, l + 1);
    if (!r) r = AtomExpression_6(b, l + 1);
    if (!r) r = AtomExpression_7(b, l + 1);
    if (!r) r = AtomExpression_8(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '[' [ListElements] ']'
  private static boolean AtomExpression_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AtomExpression_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "[");
    r = r && AtomExpression_4_1(b, l + 1);
    r = r && consumeToken(b, "]");
    exit_section_(b, m, null, r);
    return r;
  }

  // [ListElements]
  private static boolean AtomExpression_4_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AtomExpression_4_1")) return false;
    ListElements(b, l + 1);
    return true;
  }

  // '{' [MapElements] '}'
  private static boolean AtomExpression_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AtomExpression_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "{");
    r = r && AtomExpression_5_1(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, null, r);
    return r;
  }

  // [MapElements]
  private static boolean AtomExpression_5_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AtomExpression_5_1")) return false;
    MapElements(b, l + 1);
    return true;
  }

  // 'fun' '(' [FunctionArguments] ')' '{' Statement* '}'
  private static boolean AtomExpression_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AtomExpression_6")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "fun");
    r = r && consumeToken(b, "(");
    r = r && AtomExpression_6_2(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && consumeToken(b, "{");
    r = r && AtomExpression_6_5(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, null, r);
    return r;
  }

  // [FunctionArguments]
  private static boolean AtomExpression_6_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AtomExpression_6_2")) return false;
    FunctionArguments(b, l + 1);
    return true;
  }

  // Statement*
  private static boolean AtomExpression_6_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AtomExpression_6_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AtomExpression_6_5", c)) break;
    }
    return true;
  }

  // 'new' IDENTIFIER '(' [FunctionArguments] ')'
  private static boolean AtomExpression_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AtomExpression_7")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "new");
    r = r && consumeToken(b, IDENTIFIER);
    r = r && consumeToken(b, "(");
    r = r && AtomExpression_7_3(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, m, null, r);
    return r;
  }

  // [FunctionArguments]
  private static boolean AtomExpression_7_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AtomExpression_7_3")) return false;
    FunctionArguments(b, l + 1);
    return true;
  }

  // '(' Expression ')'
  private static boolean AtomExpression_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AtomExpression_8")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "(");
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Expression [',' CallArguments]
  static boolean CallArguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallArguments")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Expression(b, l + 1);
    r = r && CallArguments_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [',' CallArguments]
  private static boolean CallArguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallArguments_1")) return false;
    CallArguments_1_0(b, l + 1);
    return true;
  }

  // ',' CallArguments
  private static boolean CallArguments_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallArguments_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && CallArguments(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // MemberExpression ['(' [CallArguments] ')']
  static boolean CallExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExpression")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = MemberExpression(b, l + 1);
    r = r && CallExpression_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ['(' [CallArguments] ')']
  private static boolean CallExpression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExpression_1")) return false;
    CallExpression_1_0(b, l + 1);
    return true;
  }

  // '(' [CallArguments] ')'
  private static boolean CallExpression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExpression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "(");
    r = r && CallExpression_1_0_1(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, m, null, r);
    return r;
  }

  // [CallArguments]
  private static boolean CallExpression_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExpression_1_0_1")) return false;
    CallArguments(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ('default' | 'case' CaseValue) '->' Statements
  static boolean CaseStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CaseStatement")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = CaseStatement_0(b, l + 1);
    r = r && consumeToken(b, "->");
    r = r && Statements(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'default' | 'case' CaseValue
  private static boolean CaseStatement_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CaseStatement_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "default");
    if (!r) r = CaseStatement_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'case' CaseValue
  private static boolean CaseStatement_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CaseStatement_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "case");
    r = r && CaseValue(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // STRING | NUMBER
  static boolean CaseValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CaseValue")) return false;
    if (!nextTokenIs(b, "", NUMBER, STRING)) return false;
    boolean r;
    r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, NUMBER);
    return r;
  }

  /* ********************************************************** */
  // ClassVariable
  //   | ClassConstructor
  //   | ClassFunction
  //   | ClassOperator
  public static boolean ClassBodyStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassBodyStatement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLASS_BODY_STATEMENT, "<class body statement>");
    r = ClassVariable(b, l + 1);
    if (!r) r = ClassConstructor(b, l + 1);
    if (!r) r = ClassFunction(b, l + 1);
    if (!r) r = ClassOperator(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER '(' [FunctionArguments] ')' '{' Statement* '}'
  public static boolean ClassConstructor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassConstructor")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && consumeToken(b, "(");
    r = r && ClassConstructor_2(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && consumeToken(b, "{");
    r = r && ClassConstructor_5(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, CLASS_CONSTRUCTOR, r);
    return r;
  }

  // [FunctionArguments]
  private static boolean ClassConstructor_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassConstructor_2")) return false;
    FunctionArguments(b, l + 1);
    return true;
  }

  // Statement*
  private static boolean ClassConstructor_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassConstructor_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ClassConstructor_5", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ['static'] 'fun' IDENTIFIER '(' [FunctionArguments] ')' '{' Statement* '}'
  public static boolean ClassFunction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassFunction")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLASS_FUNCTION, "<class function>");
    r = ClassFunction_0(b, l + 1);
    r = r && consumeToken(b, "fun");
    r = r && consumeToken(b, IDENTIFIER);
    r = r && consumeToken(b, "(");
    r = r && ClassFunction_4(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && consumeToken(b, "{");
    r = r && ClassFunction_7(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ['static']
  private static boolean ClassFunction_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassFunction_0")) return false;
    consumeToken(b, "static");
    return true;
  }

  // [FunctionArguments]
  private static boolean ClassFunction_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassFunction_4")) return false;
    FunctionArguments(b, l + 1);
    return true;
  }

  // Statement*
  private static boolean ClassFunction_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassFunction_7")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ClassFunction_7", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // 'operator' OPERATOR '(' [FunctionArguments] ')' '{' Statement* '}'
  public static boolean ClassOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassOperator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLASS_OPERATOR, "<class operator>");
    r = consumeToken(b, "operator");
    r = r && consumeToken(b, OPERATOR);
    r = r && consumeToken(b, "(");
    r = r && ClassOperator_3(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && consumeToken(b, "{");
    r = r && ClassOperator_6(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [FunctionArguments]
  private static boolean ClassOperator_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassOperator_3")) return false;
    FunctionArguments(b, l + 1);
    return true;
  }

  // Statement*
  private static boolean ClassOperator_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassOperator_6")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ClassOperator_6", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER '{' ClassBodyStatement* '}'
  public static boolean ClassStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassStatement")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && consumeToken(b, "{");
    r = r && ClassStatement_2(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, CLASS_STATEMENT, r);
    return r;
  }

  // ClassBodyStatement*
  private static boolean ClassStatement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassStatement_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ClassBodyStatement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ClassStatement_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ['static'] 'var' IDENTIFIER ['=' Expression] ';'
  public static boolean ClassVariable(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassVariable")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLASS_VARIABLE, "<class variable>");
    r = ClassVariable_0(b, l + 1);
    r = r && consumeToken(b, "var");
    r = r && consumeToken(b, IDENTIFIER);
    r = r && ClassVariable_3(b, l + 1);
    r = r && consumeToken(b, ";");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ['static']
  private static boolean ClassVariable_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassVariable_0")) return false;
    consumeToken(b, "static");
    return true;
  }

  // ['=' Expression]
  private static boolean ClassVariable_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassVariable_3")) return false;
    ClassVariable_3_0(b, l + 1);
    return true;
  }

  // '=' Expression
  private static boolean ClassVariable_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassVariable_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "=");
    r = r && Expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '!' ComparisonExpression
  //   | ArithmeticExpression [ComparisonOp ArithmeticExpression]
  static boolean ComparisonExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComparisonExpression")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ComparisonExpression_0(b, l + 1);
    if (!r) r = ComparisonExpression_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '!' ComparisonExpression
  private static boolean ComparisonExpression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComparisonExpression_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "!");
    r = r && ComparisonExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ArithmeticExpression [ComparisonOp ArithmeticExpression]
  private static boolean ComparisonExpression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComparisonExpression_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ArithmeticExpression(b, l + 1);
    r = r && ComparisonExpression_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [ComparisonOp ArithmeticExpression]
  private static boolean ComparisonExpression_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComparisonExpression_1_1")) return false;
    ComparisonExpression_1_1_0(b, l + 1);
    return true;
  }

  // ComparisonOp ArithmeticExpression
  private static boolean ComparisonExpression_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComparisonExpression_1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ComparisonOp(b, l + 1);
    r = r && ArithmeticExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '==' | '!=' | '<' | '>' | '<=' | '>='
  static boolean ComparisonOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComparisonOp")) return false;
    boolean r;
    r = consumeToken(b, "==");
    if (!r) r = consumeToken(b, "!=");
    if (!r) r = consumeToken(b, "<");
    if (!r) r = consumeToken(b, ">");
    if (!r) r = consumeToken(b, "<=");
    if (!r) r = consumeToken(b, ">=");
    return r;
  }

  /* ********************************************************** */
  // SetVariable
  //   | ModifyVariable
  //   | SizeExpression
  public static boolean Expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, EXPRESSION, "<expression>");
    r = SetVariable(b, l + 1);
    if (!r) r = ModifyVariable(b, l + 1);
    if (!r) r = SizeExpression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // FactorOp FactorExpression
  //   | PowerExpression
  static boolean FactorExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FactorExpression")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = FactorExpression_0(b, l + 1);
    if (!r) r = PowerExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // FactorOp FactorExpression
  private static boolean FactorExpression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FactorExpression_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = FactorOp(b, l + 1);
    r = r && FactorExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '+' | '-'
  static boolean FactorOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FactorOp")) return false;
    boolean r;
    r = consumeToken(b, "+");
    if (!r) r = consumeToken(b, "-");
    return r;
  }

  /* ********************************************************** */
  // '(' IDENTIFIER ':' MemberExpression ')' Statements
  public static boolean ForEachStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForEachStatement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FOR_EACH_STATEMENT, "<for each statement>");
    r = consumeToken(b, "(");
    r = r && consumeToken(b, IDENTIFIER);
    r = r && consumeToken(b, ":");
    r = r && MemberExpression(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && Statements(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '(' [Expression] ';' [Expression] ';' [Expression] ')' Statements
  public static boolean ForStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForStatement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FOR_STATEMENT, "<for statement>");
    r = consumeToken(b, "(");
    r = r && ForStatement_1(b, l + 1);
    r = r && consumeToken(b, ";");
    r = r && ForStatement_3(b, l + 1);
    r = r && consumeToken(b, ";");
    r = r && ForStatement_5(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && Statements(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [Expression]
  private static boolean ForStatement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForStatement_1")) return false;
    Expression(b, l + 1);
    return true;
  }

  // [Expression]
  private static boolean ForStatement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForStatement_3")) return false;
    Expression(b, l + 1);
    return true;
  }

  // [Expression]
  private static boolean ForStatement_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForStatement_5")) return false;
    Expression(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER [',' FunctionArguments]
  static boolean FunctionArguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionArguments")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && FunctionArguments_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [',' FunctionArguments]
  private static boolean FunctionArguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionArguments_1")) return false;
    FunctionArguments_1_0(b, l + 1);
    return true;
  }

  // ',' FunctionArguments
  private static boolean FunctionArguments_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionArguments_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && FunctionArguments(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER '(' [FunctionArguments] ')' '{' Statement* '}'
  public static boolean FunctionStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionStatement")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && consumeToken(b, "(");
    r = r && FunctionStatement_2(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && consumeToken(b, "{");
    r = r && FunctionStatement_5(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, FUNCTION_STATEMENT, r);
    return r;
  }

  // [FunctionArguments]
  private static boolean FunctionStatement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionStatement_2")) return false;
    FunctionArguments(b, l + 1);
    return true;
  }

  // Statement*
  private static boolean FunctionStatement_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionStatement_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "FunctionStatement_5", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // '(' Expression ')' Statements ['else' Statements]
  public static boolean IfStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IfStatement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IF_STATEMENT, "<if statement>");
    r = consumeToken(b, "(");
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && Statements(b, l + 1);
    r = r && IfStatement_4(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ['else' Statements]
  private static boolean IfStatement_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IfStatement_4")) return false;
    IfStatement_4_0(b, l + 1);
    return true;
  }

  // 'else' Statements
  private static boolean IfStatement_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IfStatement_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "else");
    r = r && Statements(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Expression [',' ListElements]
  static boolean ListElements(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListElements")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Expression(b, l + 1);
    r = r && ListElements_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [',' ListElements]
  private static boolean ListElements_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListElements_1")) return false;
    ListElements_1_0(b, l + 1);
    return true;
  }

  // ',' ListElements
  private static boolean ListElements_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListElements_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && ListElements(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
